:sparkles: adicionar página de eventos

--- a/404.html
+++ b/404.html
@@ -16,11 +16,20 @@ layout: home
     line-height: 1;
     letter-spacing: -1px;
   }
+
+  h3 {
+    margin-top: 1rem;
+    font-size: 2em;
+  }
 </style>
 
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Página não entrada :(</strong></p>
+  <p>O endereço está errado ou o link compartilhado não é mais válido</p>
+
+  <a href="/">
+    <h3>Voltar para início</h3>
+  </a>
 </div>
